Bug 1718404 - Fix high frequency browser_interactions_typing.js failure. r=Standard8, a=RyanVM

Fix a scenario where it was possible, in automation, for the typing interaction time to report 0ms due to rounding of fractional milliseconds.

In addition, now sending keystrokes individually as this is a better simulation of how users type.

Differential Revision: https://phabricator.services.mozilla.com/D125189